# openai-batch-test

./: .gitignore  README.md  azure_batch_input.jsonl  batch_processor.py  create_batch_requests.py  dev.yml  pyproject.toml  sample_batch_input.jsonl
